8306922: IR verification fails because IR dump is chopped up